--- a/index.html
+++ b/index.html
@@ -8,28 +8,51 @@
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <div class="container">
+    
+    <div class="card">
 
-  803K
-  Likes
+      <div class="background-cover">
+        <img src="images/bg-pattern-card.svg" alt="background-cover">
+      </div>
+      <div class="profile-img">
+        <img src="images/image-victor.jpg" alt="image-profile">
+      </div>
 
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="title-profile">
+        <h1>Victor Crest <span class="age">26</span></h1>
+        <span class="city">London</span>
+      </div>
+
+      <div class="states-profile">
+        <div class="block-states">
+          <span class="statistic">80K</span>
+          <span class="title-statistic">Followers</span>
+        </div>
+
+        <div class="block-states">
+          <span class="statistic">803K</span>
+          <span class="title-statistic">Likes</span>
+        </div>
+        
+        <div class="block-states">
+          <span class="statistic">1.4K</span>
+          <span class="title-statistic">Photos</span>
+        </div>
+
+      </div>
+
+    </div>
+
   </div>
+
 </body>
 </html>
